--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                             </a>
                         </li>
                     </ul>
-                    <button class="header-navbar__header-button header-button">
+                    <button class="header-navbar__header-button header-button" id="open-search">
                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" class="header-button__search-icon search-icon">
                             <rect width="7.56126" height="1.89031" transform="matrix(0.713342 0.700816 -0.713342 0.700816 18.6062 17.3762)" />
                             <path d="M20.9303 10.7726C20.9303 16.1533 16.4855 20.5452 10.9652 20.5452C5.44478 20.5452 1 16.1533 1 10.7726C1 5.39198 5.44478 1 10.9652 1C16.4855 1 20.9303 5.39198 20.9303 10.7726Z" stroke="#333" stroke-width="2" fill="transparent" />
@@ -98,7 +98,7 @@
             </div>
         </header>
         <main class="main">
-            <div class="content-block container about">
+            <section class="content-block container about">
                 <h1 class="content-block__title page-title">
                     О нас
                 </h1>
@@ -154,7 +154,7 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </section>
         </main>
         <footer class="footer">
 
