--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <div class="wrapper">
         <header class="header">
             <nav class="header-navigation">
+                <button class="burger-button _hidden" id="burger-open"></button>
                 <a href="#" class="header-logo logo-link">
                     <img src="img/logo.svg" alt="Logo" class="header-logo__logo">
                 </a>
@@ -51,7 +52,7 @@
                         </svg>
                     </button>
                 </div>
-                <div class="header-searchbar">
+                <div class="header-searchbar _hidden">
                     <div class="search-bar">
                         <div class="search-bar__inputs">
                             <input type="text" placeholder="Что будем искать?" class="search-bar__input">
@@ -72,6 +73,57 @@
                         </button>
                     </div>
                 </div>
+                <!-- Burger Menu -->
+                <!-- <div class="burger-wrapper">
+                    <div class="menu-burger _hidden">
+                        <div class="search-bar">
+                            <div class="search-bar__inputs">
+                                <input type="text" placeholder="Что будем искать?" class="search-bar__input">
+                                <div class="search-bar__underline"></div>
+                            </div>
+                            <button class="header-navbar__header-button header-button" id="search">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" class="header-button__search-icon search-icon">
+                                    <rect width="7.56126" height="1.89031" transform="matrix(0.713342 0.700816 -0.713342 0.700816 18.6062 17.3762)" />
+                                    <path d="M20.9303 10.7726C20.9303 16.1533 16.4855 20.5452 10.9652 20.5452C5.44478 20.5452 1 16.1533 1 10.7726C1 5.39198 5.44478 1 10.9652 1C16.4855 1 20.9303 5.39198 20.9303 10.7726Z" stroke="#FF9900" stroke-width="2" fill="transparent" />
+                                </svg>
+                            </button>
+                            <button class="header-searchbar__header-button header-button" id="close-search">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
+                                    <rect x="8.95386" y="7.30435" width="11.6645" height="2.33291" transform="rotate(45 8.95386 7.30435)" fill="#999999"/>
+                                    <rect x="7.30432" y="15.5524" width="11.6645" height="2.33291" transform="rotate(-45 7.30432 15.5524)" fill="#999999"/>
+                                    <circle cx="12" cy="12" r="11" stroke="#999999" stroke-width="2"/>
+                                    </svg>
+                            </button>
+                        </div>
+                        <ul class="menu-burger__header-links header-links">
+                            <li class="header-links__link">
+                                <a href="#" class="header-link link">
+                                    О нас
+                                </a>
+                            </li>
+                            <li class="header-links__link">
+                                <a href="#" class="header-link link">
+                                    Проекты
+                                </a>
+                            </li>
+                            <li class="header-links__link">
+                                <a href="#" class="header-link link">
+                                    Этапы
+                                </a>
+                            </li>
+                            <li class="header-links__link">
+                                <a href="#" class="header-link link">
+                                    Отзывы
+                                </a>
+                            </li>
+                            <li class="header-links__link">
+                                <a href="#" class="header-link link">
+                                    Контакты
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div> -->
             </nav>
             <div class="swiper-container header-slider container">
                 <div class="swiper__order-block order-block">
